fixed break z-indexing

--- a/public/style.css
+++ b/public/style.css
@@ -641,7 +641,7 @@ a:hover {
 
 /* BREAK 8============================================D ~~~ */
 
-.break {
+.breakWork {
     height: 550px;
     width: 870px;
 }
